--- a/package.json
+++ b/package.json
@@ -20,32 +20,33 @@
     "date-fns": "^2.30.0",
     "encoding": "^0.1.13",
     "framer-motion": "10.13.0",
-    "lucide-react": "^0.262.0",
-    "next": "^13.4.10",
+    "lucide-react": "^0.263.0",
+    "next": "^13.4.12",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.0.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.32.3",
+    "sharp": "^0.32.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
+    "use-debounce": "^9.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "20.4.2",
+    "@types/node": "20.4.3",
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.10",
+    "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "postcss": "^8.4.26",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.3",
